# gt6-vein-manager

./: .env  Cargo.toml  diesel.toml  extract_ores.sh  oresBedrock.txt  oresLarge.txt  oresSmall.txt  oresVanilla.txt  readme.md
migrations/2025-06-02-225520_user/: up.sql
migrations/2025-06-02-225531_invitation/: down.sql  up.sql
migrations/2025-06-02-225545_vein/: down.sql  up.sql
migrations/2025-06-02-225631_vein_confirmation/: down.sql  up.sql
migrations/2025-06-02-225641_vein_depletion/: down.sql  up.sql
migrations/2025-06-02-225649_vein_revocation/: down.sql  up.sql
migrations/2025-06-02-230009_vein_note/: down.sql  up.sql
migrations/2025-06-02-230851_vein_is_bedrock/: down.sql  up.sql
migrations/2025-06-03-203112_sessions/: up.sql
public/: index.html  styles.css
src/: app.rs  auth.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
src/auth/: backend.rs  mod.rs  queries.rs  session_store.rs  utils.rs
src/database/: connection.rs  mod.rs  queries.rs
src/handlers/: api.rs  auth.rs  mod.rs  static_files.rs  vein.rs  web.rs
src/models/: auth.rs  forms.rs  mod.rs  sessions.rs  vein.rs
tests/: integration_tests.rs
tests/common/: mod.rs
