[package]
name = "gt6-vein-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
axum-login = "0.17.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "uuid",
] }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["mysql"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
